--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,4 @@
   from = "/api/*"
   to = "https://www.opwebdev.com/api/:splat"
   status = 200
-  force = true
-  headers = { 
-    Access-Control-Allow-Origin = "*",
-    Access-Control-Allow-Methods = "GET, POST, OPTIONS",
-    Access-Control-Allow-Headers = "Content-Type"
-  }
+  headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, OPTIONS", Access-Control-Allow-Headers = "Content-Type" }
