updating cors again

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,17 @@
 [[redirects]]
+  from = "https://opwebdev.com/*"
+  to = "https://www.opwebdev.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/api/*"
   to = "https://www.opwebdev.com/api/:splat"
   status = 200
-  headers = { Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, OPTIONS", Access-Control-Allow-Headers = "Content-Type" }
+
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
