--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [[redirects]]
  from = "/*"
- to = "/index.html"
- status = 200
+ to = "https://www.opwebdev.com/:splat"
+ status = 301
+ force = true
+ conditions = { Host = "opwebdev.com" }
 
 [[redirects]]
   from = "/api/*"
