--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[build]
+ functions = "functions
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
@@ -5,7 +8,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "https://opwebdev.com/api/:splat"
+  to = "/.netlify/functions/contact"
   status = 200
 
 [[headers]]
